New package songcheat-demos containing: * obsolete package songcheat-viewer (src/viewer.js, html/viewer.html) * obsolete package songcheat-samples (samples/*) * demo CLI utilities moved from songcheat-core (cli/*) * demo jQuery apps moved from songcheat-core (src/*, html/*)

--- a/html/viewer.html
+++ b/html/viewer.html
@@ -7,11 +7,11 @@
   <meta charset="UTF-8">
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
-  <script src="libs/vextab-div.js"></script>
-  <style src="libs/vextab.css"></style>
+  <script src="../libs/vextab-div.js"></script>
+  <style src="../libs/vextab.css"></style>
 
-  <script src="dist/songcheat-viewer.umd.js" nomodule defer></script>
-  <script src="dist/songcheat-viewer.esm.js" type="module"></script>
+  <script src="../dist/viewer.umd.js" nomodule defer></script>
+  <script src="../dist/viewer.esm.js" type="module"></script>
 
 </head>
 
