Distinction between "dist" = modules which must be committed and "build" = apps which must not be committed

--- a/html/chords.html
+++ b/html/chords.html
@@ -5,8 +5,8 @@
   <title>SongCheat ChordPix Test</title>
   <meta charset="UTF-8">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
-  <script src="../dist/chords.umd.js" nomodule defer></script>
-  <script src="../dist/chords.esm.js" type="module"></script>
+  <script src="../build/chords.umd.js" nomodule defer></script>
+  <script src="../build/chords.esm.js" type="module"></script>
 </head>
 
 <body>
