--- a/html/player.html
+++ b/html/player.html
@@ -5,8 +5,8 @@
   <title>SongCheat Player Test</title>
   <meta charset="UTF-8">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
-  <script src="../dist/player.umd.js" nomodule defer></script>
-  <script src="../dist/player.esm.js" type="module"></script>
+  <script src="../build/player.umd.js" nomodule defer></script>
+  <script src="../build/player.esm.js" type="module"></script>
 
   <style>
     a {
