--- a/html/viewer.html
+++ b/html/viewer.html
@@ -10,8 +10,8 @@
   <script src="../libs/vextab-div.js"></script>
   <style src="../libs/vextab.css"></style>
 
-  <script src="../dist/viewer.umd.js" nomodule defer></script>
-  <script src="../dist/viewer.esm.js" type="module"></script>
+  <script src="../build/viewer.umd.js" nomodule defer></script>
+  <script src="../build/viewer.esm.js" type="module"></script>
 
 </head>
 
