npm run watch: uses npm-watch to rebuild samples/json when a txt sample has been modified samples/00-Template.txt is a symlink to songcheat-core/template/template.txt: no need to copy anymore and no risk to edit the wrong file (and a change to the symlinked file is correctly detected)

--- a/html/chords.html
+++ b/html/chords.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>SongCheat ChordPix Test</title>
+  <title>SongCheat Chords Test</title>
   <meta charset="UTF-8">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
   <script src="../build/chords.umd.js" nomodule defer></script>
