--- a/html/viewer.html
+++ b/html/viewer.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <title>SongCheat VexTab Test</title>
+  <title>SongCheat Viewer</title>
   <meta charset="UTF-8">
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
